--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "swiper": "^11.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
